--- a/views/apply.ejs
+++ b/views/apply.ejs
@@ -40,114 +40,36 @@
     <div class="row">
       <div class="column column-40" ng-form="find">
           <section id="find">
-              <h2 class="black"> Find Person </h2>
+              <h2 class="black"> Find Student </h2>
 
               <label class="label-inline">
                   Registration Number
               </label>
-              <input type="text" name="id" id="id" ng-keypress="$event.keyCode==13 && find.$valid && !found ? findParticipant() : null " required ng-model="participant._id" ng-blur="participant._id=participant._id.toUpperCase()" ng-change="participant._id=participant._id.toUpperCase()"/>
-              <button class="button button-outline" ng-disabled="found || find.id.$invalid" ng-click="findParticipant()" > Find </button>
+              <input type="text" name="id" id="id" ng-keypress="$event.keyCode==13 && find.$valid && !found ? findStudent() : null " required ng-model="student._id" ng-blur="student._id=student._id.toUpperCase()" ng-change="student._id=student._id.toUpperCase()"/>
+              <button class="button button-outline" ng-disabled="found || find.id.$invalid" ng-click="findStudent()" > Find </button>
           </section>
       </div>
       <div ng-form="detail" class="column column-40 column-offset-20"  ng-if="found != null && created==false">
         <section id="details">
-          <h2> Participant Details </h2>
+          <h2> Student Details </h2>
           <label>
             Name:
-            <input type="text" name="name" id="name" required ng-model="participant.name" ng-disabled="found"/>
+            <input type="text" name="name" id="name" required ng-model="student.name" ng-disabled="found"/>
           </label>
-          <button class="button button-outline" type="submit" ng-click="createParticipant()" ng-disabled="found || detail.$invalid" > Create Participant </button>
+          <button class="button button-outline" type="submit" ng-click="createStudent()" ng-disabled="found || detail.$invalid" > Create Student </button>
         </section>
       </div>
 
       <div class="column column-40 column-offset-20"  ng-if="created">
         <section id="details">
-          <h2> Participant Details </h2>
-          <label> Name: {{participant.name}}</label>
+          <h2> Student Details </h2>
+          <label> Name: {{student.name}}</label>
         </section>
       </div>
     </div>
 
-    <section ng-form="reg" id="register" ng-if="found == true">
-      <h2 class="black"> Register for Events </h2>
 
-      <div class="row">
-        <div class="column column-40" >
-          <input type="search" ng-model="searchQuery.$" placeholder="search query" value="" />
-        </div>
-        <div class="column column-10">
-            <select ng-model="searchQuery.subCategory" ng-options="val for val in eventCategories">
-            </select>
-        </div>
-        <div class="column column-10" >
-          <input type="number" min="0" ng-model="searchLimit" placeholder="limit"/>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row">
-        <div class="columns column-30">
-            <table >
-                <tr ng-repeat="e in eventData | filter: searchQuery | limitTo:searchLimit">
-
-                    <td ng-bind="e.name"></td>
-                    <td> <span> {{ e.organization.join(',') }} </span> </td>
-                    <td ng-bind="e.subCategory"></td>
-                    <td ng-bind="e.participationFee"></td>
-                    <td> <button class="button button-primary" ng-click="addEvent(e.name, e.participationFee)" ng-disabled="isAdded(e.name)"> <b> +  </b></button> </td>
-
-                </tr>
-            </table>
-            </div>
-
-            <div class="columns column-20 column-offset-10">
-            <table>
-                <tr ng-repeat = "event in events">
-                <td> {{ event.name }}</td>
-                <td> {{ event.price }}  </td>
-                <td>  <button class="button button-primary" ng-click="deleteEvent($index)"> <b>- </b></button></td>
-                </tr>
-                <tr class="black">
-                    <td>Total</td>
-                    <td>{{ computeSubTotal()   }}</td>
-                    <td></td>
-                </tr>
-            </table>
-            </div>
-        </div>
-        </div>
-      <div class="row">
-        <label>
-            <h3>Payment:
-            <small>Cash </small><input type="radio" name="payment" value="cash" id="cash" ng-model="participant.payment.paymentType" />
-            <small>Card </small><input type="radio" name="payment" value="card" id="card" ng-model="participant.payment.paymentType" />
-                </h3>
-        </label>
-        <label ng-if="participant.payment.paymentType=='card'">
-            Transcation ID: <input type="text" name="id" id="id" required ng-model="participant.payment.transactionId"/>
-        </label>
-      </div>
-        <button class="button blackbutton" ng-disabled="reg.$invalid" ng-click="confirm('start events registration process?', submit);" > Register </button>
-        <button class="button blackbutton" ng-click="confirm('refresh the data?', init);" > New </button>
-    </section>
-
-<h1 class="black"> T shirt </h1>
-    <div class="row">
-      <label>
-          <h4 class="black">T shirt Price: 399</h4>
-          <h3>Payment:
-          <small>Cash </small><input type="radio" name="salesPayment" value="cash" id="cash" ng-model="sales.payment.paymentType" />
-          <small>Card </small><input type="radio" name="salesPayment" value="card" id="card" ng-model="sales.payment.paymentType" />
-              </h3>
-      </label>
-      <label ng-if="sales.payment.paymentType=='card'">
-          Transcation ID: <input type="text" name="id" id="id" required ng-model="sales.payment.transactionId"/>
-      </label>
-    </div>
-      <button class="button blackbutton"   ng-click="confirm('start tshirt registration process?', submitSales);" > Buy Tshirt </button>
-  </section>
-
-
+      <button class="button blackbutton"   ng-click="confirm('apply OD?', applyOD);" > Apply </button>
 
 
 
@@ -181,138 +103,52 @@
     app.controller('RegistrationCtrl', ['$scope', '$http', function ($scope, $http) {
 
       $http.defaults.headers.common['Accept'] = 'application/json';
-      var content = `Please Wait...<br>Payment in progress!`;
+      var content = `Please Wait...<br>Application in progress!`;
       $scope.init = function()
       {
           console.log("Init!");
-          $scope.searchQuery = '';
-          $scope.sum=0;
-          $scope.searchLimit = 5;
-          $scope.participant = {
+          $scope.student = {
             _id: null,
-            name: null,
-            phone: null,
-            email: null,
-            room: null,
-            gender: null,
-            payment : {
-                paymentType:'cash',
-                transactionId:null
-            },
-            events: []
+            name: null
           };
-          $scope.sales = {
-            itemName: 'tshirt',
-            cost: 399,
-            payment : {
-                paymentType:'cash',
-                transactionId:null
-            },
-            participantId: null
-          }
           $scope.created = false;
           $scope.found = null;
-          $scope.events = [];
       }
       $scope.init();
 
-      $scope.submitSales = function ()
+      $scope.findStudent = function()
       {
-        $scope.checkout();
-        var sales =
-        {
-          itemName: $scope.sales.itemName,
-          cost: $scope.sales.cost,
-          payment: $scope.sales.payment,
-          participantId: $scope.participant._id
-        }
-        $http.post('purchase', sales).then(success, failure);
-        function success (response)
-        {
-          toastr["success"]("Tshirt Registration Successful!");
-          vex.close();
-        }
-
-        function failure(response)
-        {
-          toastr["error"]("Please check your internet connection.","Tshirt Registration failed!");
-          console.log(response);
-          vex.close();
-        }
-      }
-      $scope.isAdded = function(name)
-        {
-            if ($scope.events == null || $scope.participant.events == null)
-            {
-                return true;
-            }
-            var isCurrent = $scope.events.filter(function (e) { return e.name == name }).length != 0;
-            var isPrevious = $scope.participant.events.filter(function (eId) { return eId == name }).length != 0
-            return isCurrent || isPrevious;
-        }
-      $http.get('/api/events/list').then(function (res)
-      {
-        $scope.eventData = res.data.events;
-        $scope.eventCategories = ["Premiium", "Builtrix", "Applied Engineeering", "Bits and Bytes", "Circuitrix", "Quiz", "Robotics", "Speaking / Management", "Bio / Chemical", "Informal", "Online", "worshop"];
-      },
-      function (res)
-      {
-        toastr["error"]("Please check your internet connection.");
-      })
-
-      $scope.findParticipant = function()
-      {
-        var params = { id: $scope.participant._id };
-        $http.get('/registration/participant', { params: params })
+        var params = { id: $scope.student._id };
+        $http.get('/organizer/student', { params: params })
         .then(success, error);
 
         function success(response)
         {
-          $scope.participant = {
-            _id: response.data.participant._id,
-            name: response.data.participant.name,
-            phone : response.data.participant.phone,
-            email : response.data.participant.email,
-            gender : response.data.participant.gender,
-            room : response.data.participant.room,
-            tShirtSize : response.data.participant.tShirtSize,
-            events : getEventId(response.data.events),
-            payment : {
-                paymentType:'cash',
-                transactionId:null
-            }
+          $scope.student = {
+            _id: response.data._id,
+            name: response.data.name
           };
           $scope.found = true;
           $scope.created = true;
-            toastr["success"]($scope.participant._id+"\n"+$scope.participant.name, "Participant Found")
+            toastr["success"]($scope.student._id+"\n"+$scope.student.name, "Student Found")
           console.log(response.data);
         }
 
         function error(response)
         {
           $scope.found = false;
-          $scope.participant.gender="male";
-          $scope.participant.tShirtSize="S";
-          toastr["error"]("Enter Participant details","Participant Not Found!");
+          toastr["error"]("Enter Student details","Student Not Found!");
         }
       };
-       function getEventId(obj) {
-          res = [];
-          for(var i=0; i<obj.length; i++){
-              for(var j=0; j<obj[i].eventIds.length; j++){
-                  res.push(obj[i].eventIds[j]);
-              }
-          }
-          return res;
-      }
-      $scope.createParticipant = function()
+
+      $scope.createStudent = function()
       {
-        $http.post('/registration/participant', $scope.participant)
+        $http.post('/organizer/student', $scope.student)
         .then(success, error)
 
         function success(response)
         {
-          toastr["success"]($scope.participant._id+"\n"+$scope.participant.name, "Participant created!")
+          toastr["success"]($scope.student._id+"\n"+$scope.student.name, "Student created!")
           $scope.found = true;
           $scope.created = true;
         }
@@ -320,23 +156,14 @@
         function error (response)
         {
           console.log(response)
-          toastr["error"]("Please check your internet connection.","Participant could not be created!");
+          toastr["error"]("Please check your internet connection.","Student could not be created!");
         }
       };
 
-      $scope.addEvent = function(name, price)
-      {
-        $scope.events.push({name: name, price:price});
-      }
-
-      $scope.deleteEvent = function(index)
-      {
-        $scope.events.splice(index, 1);
-      }
-      var invalid = function()
+      var invalid = function()//end before start
       {
           var temp = $scope.events;
-          var alreadyReg = $scope.participant.events;
+          var alreadyReg = $scope.student.events;
           console.log($scope.events);
           if(!temp.length)
           {
@@ -354,7 +181,7 @@
                   }
               }
           }
-          if($scope.participant.events)
+          if($scope.student.events)
           {
 
               for (var i = 0; i < temp.length; i++)
@@ -373,18 +200,8 @@
           return false;
       }
 
-      $scope.computeSubTotal = function()
-      {
-          if ($scope.events.length == 0)
-          {
-              return 0;
-          }
-          return $scope.events.map(function(e){return e.price}).reduce(function(a,b){return a+b;});
-      }
-
       $scope.checkout = function()
       {
-          //if(invalid()){return;}
           var defaultOptions={
                 content: content,
                 showCloseButton: false,
@@ -404,6 +221,7 @@
                 console.log(data);
             });
       }
+
       $scope.confirm = function(m, cb)
       {
           vex.dialog.confirm(
@@ -433,8 +251,8 @@
          console.log($scope.events);
          var payload =
          {
-           participantId: $scope.participant._id,
-           payment: $scope.participant.payment,
+           studentId: $scope.student._id,
+           payment: $scope.student.payment,
            eventIds: $scope.events.map(function(event) { return event.name; })
          };
          $scope.checkout();
@@ -443,7 +261,7 @@
 
         function success(response)
         {
-          toastr["success"]($scope.participant._id+"\n"+$scope.participant.name, "Registration Successful!")
+          toastr["success"]($scope.student._id+"\n"+$scope.student.name, "Registration Successful!")
           vex.close();
           $scope.confirm('refresh the data?', $scope.init);
         }
