--- a/views/apply.ejs
+++ b/views/apply.ejs
@@ -78,11 +78,11 @@
             </label>
             <label>
               Time:
-              <input type="radio" name="time" value="firstHalf" id="firstHalf" ng-model="student.time"/>
+              <input type="radio" name="duration" value="firstHalf" id="firstHalf" ng-model="student.duration"/>
               <small>First Half </small>
-              <input type="radio" name="time" value="secondHalf" id="secondHalf" ng-model="student.time"/>
+              <input type="radio" name="duration" value="secondHalf" id="secondHalf" ng-model="student.duration"/>
               <small>Second Half </small>
-              <input type="radio" name="time" value="fullDay" id="fullDay" ng-model="student.time"/>
+              <input type="radio" name="duration" value="fullDay" id="fullDay" ng-model="student.duration"/>
               <small>Full Day</small>
             </label>
             <label class="label">
